client/src/pages/components/cards.scss
@use "../../css/variables" as *;

.post-card {
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  align-items: stretch;
  min-height: 13em;
  background-color: var(--colour1-tertiary);
  border-radius: 10px;
  border: $size-thin solid transparent;
  overflow: hidden;
  transition-duration: var(--duration-global);
  transition-property: border-color, box-shadow;

  &--preview {
    // & .post-card__body {
    //   flex: 1 0 13em;
    // }
  }

  &--fav {
    border-color: var(--favourite-colour2-primary);
  }

  &:hover,
  &:focus-within {
    // border-color: var(--positive-colour1-secondary);
    box-shadow: 0px 0px 3px 5px var(--positive-colour1-secondary);

    & .post-card__image-container {
      visibility: hidden;
      opacity: 0;
      pointer-events: none;
    }

    & .post-card__view {
      visibility: hidden;
      opacity: 0;
      pointer-events: none;
    }
  }

  & > * {
    flex: 0 1 auto;
    padding: $size-small;
  }

  // TODO: fix 
  &__view {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
    background-color: var(--colour1-tertiary);
    padding: 0;
    transition-property: opacity, visibility;
    transition-duration: var(--duration-global);
  }

  &__button {
    width: 100%;
    margin-bottom: 0.5em;
  }

  &__image-container {
    position: absolute;
    top: calc(44px + 0.5em);
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 1;
    background-color: var(--colour1-tertiary);
    padding: 0;
    transition-property: opacity, visibility;
    transition-duration: var(--duration-global);
    padding: 0;
  }

  &__image {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }

  &__header {
    padding: 0;

    & > * {
      padding: $size-small;
    }
  }
  
  &__heading {}

  &__user {
    visibility: hidden;
    opacity: 0;
    transition-property: background-color, visibility, opacity;

    &--fav {
      visibility: visible;
      opacity: 1;
      background-color: var(--favourite-colour2-primary);
    }
  }

  &__name {}

  &__body {
    position: relative;
    flex: 1 1 auto;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-end;
    align-items: center;
    // text-overflow: ellipsis;
    // line-height: 1.5;
    background-color: var(--colour1-tertiary);

    // &::after {
    //   content: "";
    //   position: absolute;
    //   bottom: 0;
    //   right: 0;
    //   left: 0;
    //   height: 2em;
    //   background: linear-gradient(
    //     to bottom,
    //     hsla(0, 0%, 0%, 0), 
    //     var(--colour1-tertiary)
    //   );
    // }
  }

  &__link {
    text-align: center;
    font-size: 1.2em;
    padding-top: 0.5em;
  }
}

.user-card {
  display: grid;
  grid-template-columns: 3em 10em 7em 15em;
  grid-template-rows: minmax(3em, 1fr);
  justify-items: center;
  align-items: center;
  gap: 2em;
  line-height: 1.5;
  background-color: var(--colour1-tertiary);
  border-radius: 10px;
  border: $size-thin solid transparent;
  margin: 0 auto;
  overflow: hidden;
  transition-duration: var(--duration-global);
  transition-property: border-color, box-shadow;

  &--fav {
    border-color: var(--favourite-colour2-primary);
  }

  &:hover,
  &:focus-within {
    box-shadow: 0px 0px 3px 5px var(--positive-colour1-secondary);
  }

  &--header {
    font-weight: bold;
    text-transform: capitalize;
    justify-items: center;
    border-radius: 0;

    &:hover,
    &:focus-within {
      // border-color: var(--positive-colour1-secondary);
      box-shadow: none;
    }

    & .user-card__icon {
      align-self: center;
      border-radius: 0;
    }
  }

  &__icon {
    align-self: center;
    height: 3em;
    overflow: hidden;
    border-radius: 10px;
  }

  &__name {
    justify-self: flex-start;
  }
}

.dm-card {
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  align-items: stretch;
  background-color: var(--colour1-tertiary);
  border-radius: 10px;
  border: $size-thin solid transparent;
  overflow: hidden;
  transition-duration: var(--duration-global);
  transition-property: border-color, box-shadow;

  & > * {
    flex: 0 1 auto;
    padding: $size-small;
  }

  &:hover,
  &:focus-within {
    box-shadow: 0px 0px 3px 5px var(--positive-colour1-secondary);
  }

  &__icon {
    display: inline-block;
    border-radius: 5px;
    overflow: hidden;
    width: 1em;
    height: 1em;
  }
  
  &__header {}

  &__user {}

  &__service {}

  &__body {
    flex: 1 1 auto;
  }

  &__content {
    line-height: 1.5;
  }

  &__files {}

  &__embeds {}

  &__footer {}

  &__published {}

  &__added {}
}

